WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139808
REGRESSION(174226): Captured arguments in a using function compiled by the DFG have the initial value when the closure was invoked
https://bugs.webkit.org/show_bug.cgi?id=139808
Summary
REGRESSION(174226): Captured arguments in a using function compiled by the DF...
Michael Saboff
Reported
2014-12-18 21:50:16 PST
A DFG compiled function that accesses a captured argument from the closure treats that argument as a constant with the initial value passed into the closure. <
rdar://problem/19202075
>
Attachments
Patch
(6.81 KB, patch)
2014-12-18 23:07 PST
,
Michael Saboff
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-mountainlion
(577.33 KB, application/zip)
2014-12-18 23:49 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-mountainlion-wk2
(508.65 KB, application/zip)
2014-12-18 23:51 PST
,
Build Bot
no flags
Details
Updated patch with copy-paste error fixed
(6.81 KB, patch)
2014-12-19 07:40 PST
,
Michael Saboff
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2014-12-18 23:07:47 PST
Created
attachment 243544
[details]
Patch
Build Bot
Comment 2
2014-12-18 23:49:26 PST
Comment on
attachment 243544
[details]
Patch
Attachment 243544
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5546179676864512
New failing tests: js/regress-139808.html
Build Bot
Comment 3
2014-12-18 23:49:28 PST
Created
attachment 243545
[details]
Archive of layout-test-results from ews102 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 4
2014-12-18 23:51:44 PST
Comment on
attachment 243544
[details]
Patch
Attachment 243544
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5159540278427648
New failing tests: js/regress-139808.html
Build Bot
Comment 5
2014-12-18 23:51:46 PST
Created
attachment 243546
[details]
Archive of layout-test-results from ews107 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Michael Saboff
Comment 6
2014-12-19 07:40:24 PST
Created
attachment 243552
[details]
Updated patch with copy-paste error fixed
Michael Saboff
Comment 7
2014-12-19 10:48:27 PST
Committed
r177578
: <
http://trac.webkit.org/changeset/177578
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug